--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -1,6 +1,1 @@
-<h1>New Trainer Signup:</h1>
-
-<turbo-frame id="dialogue">
-  <p>Hello there.</p>
-  <%= link_to "Next", next_dialogue_path, data: { turbo_frame: "dialogue" } %>
-</turbo-frame>
+<%= render "form" , trainer: @trainer %>
