--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -1,1 +1,5 @@
-<%= render "form" , trainer: @trainer %>
+<div class="container p-3">
+    <%= render "form" , trainer: @trainer %>
+</div>
+
+<%= link_to 'Return to Home', trainers_path %>
